--- a/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/_renderResumen.cshtml
+++ b/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/_renderResumen.cshtml
@@ -68,6 +68,6 @@
         <li> Mecanismo de restauración >= 2UIT (1 punto)</li>
     </ol>
 
-    Nota: se considera capcitable si la suma de los criterios es > 6
+    Nota: se considera capcitable si la suma de los criterios es >= 1
     <br />
 </div>
