En atención del Ticket #033746 - Búsqueda informe

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_renderListaInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_renderListaInforme.cshtml
@@ -122,7 +122,7 @@
     // para llenar el modal
 
     _renderListExpediente.fnInitDataTablePaging = function (options) {
-        alert('consultando');
+        //alert('consultando');
         var optDt = {};
         optDt.iLength = options.page_length;
         optDt.iStart = 0;
@@ -179,7 +179,7 @@
 
     _renderListExpediente.fnInit = function () {
         _renderListExpediente.frm.find("#btnConsultaILegal").click(function () {
-            alerta('consult');
+            //alerta('consult');
             _renderListExpediente.fnConsulta();
 
         });
