Atención del ticket 033923

--- a/SIGOFCv3/Areas/Supervision/Views/ManInfSuspension/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInfSuspension/AddEdit.cshtml
@@ -77,7 +77,7 @@
                                     <div class="card-body">
                                         <div class="form-row">
                                             <div class="form-group col-md-4">
-                                                <label for="ddlOdId" class="text-small">O.D. desde donde registra la información</label>
+                                                <label for="ddlOdId" class="text-small">O.D. ámbito de la supervisión</label>
                                                 @Html.DropDownListFor(m => m.txtIDOD, new SelectList(Model.ListOD, "CODIGO", "DESCRIPCION"),
                                                                     new
                                                                          {
