--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
@@ -123,7 +123,7 @@
                                     <div class="card-body">
                                         <div class="form-row">
                                             <div class="form-group col-md-3">
-                                                <label for="ddlOdId" class="text-small">O.D. desde donde registra la información</label>
+                                                <label for="ddlOdId" class="text-small">O.D. ámbito de la supervisión</label>
                                                 @Html.DropDownListFor(m => m.ddlOdId, new SelectList(Model.ddlOd, "Value", "Text"), new { @class = "form-control form-control-sm" })
                                             </div>
                                             <div class="form-group col-md-3">
