--- a/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
@@ -506,7 +506,7 @@
                                                     </label>
                                                     <div class="input-group">
                                                         <div class="input-group-prepend">
-                                                            <span class="input-group-text" onclick="ManPOA.fnBuscarPersona('REGENTE','0000020');"><i class="fa fa-search-plus" style="cursor:pointer;" data-placement="top" title="Seleccionar consultor/regente"></i></span>
+                                                            <span class="input-group-text" onclick="ManPOA.fnBuscarPersona('REGENTE','0000020,0000003');"><i class="fa fa-search-plus" style="cursor:pointer;" data-placement="top" title="Seleccionar consultor/regente"></i></span>
                                                         </div>
                                                         @Html.EditorFor(m => m.lblItemConsultorNombre, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
                                                     </div>
